--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Medicine 101</string>
+    <string name="default_web_client_id">835806294945-7capj3hho2d9qdjkhceue9fonvqqhm0k.apps.googleusercontent.com</string>
 </resources>
